# course-data-engineering-zoomcamp

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
week_1/: README.md
week_1/src/: docker-compose.yaml  homework-A.ipynb  homework.md
week_1/terraform/: README.md  bigquery.tf  common_tags.json  google_cloud_storage.tf  main.tf  provider.tf  tf.plan  tfplan.txt  variables.tf
week_2/src/: .dockerignore  .prefectignore  Dockerfile  etl_gcs_to_bq.py  etl_web_to_gcs-deployment.yaml  etl_web_to_gcs.py
week_2/src/block/: make_docker_block.py  make_gcs_block.py  make_github_block.py  make_slack_block.py
week_2/src/deployment/: deployment.md  docker_deploy.py  etl_web_to_gcs-deployment.yaml  etl_web_to_gcs.py  etl_web_to_gcs_parametize_4.py  prefect-docker-deployment-web-to-gcs-green.yaml  prefect-local-deployment-gcs-to-bq-yellow.yaml  prefect-local-deployment-schudule-job.yaml  prefect-local-deployment-web-to-gcs-yellow.yaml  test_slack_noti.py
week_2/src/docker/: .dockerignore  Dockerfile
week_2/src/flows/: etl_gcs_to_bq_parametize.py  etl_web_to_gcs-deployment.yaml  etl_web_to_gcs.py  etl_web_to_gcs_parametize.py
week_3/: homework.md
week_3/src/: Dockerfile  docker-requirements.txt  homework.sql
week_3/src/block/: make_docker_block.py
week_3/src/trip_data_2019/: docker_deploy.py  etl_web_to_gcs.py  prefect-docker-deployment-web-to-gcs-trip_data2019.yaml
week_4/: homework.md
week_4/src/: Dockerfile
week_4/src/block/: make_docker_block.py
week_4/src/docker_setup/: docker-compose.yaml
week_4/src/etl_trip_data/: config.py  docker_deploy.py  etl_web_to_gcs.py  prefect-docker-deployment-web-to-gcs-trip_data.yaml
week_4/taxi-rides-ny-project/: dbt_project.yml
week_4/taxi-rides-ny-project/macros/: get_payment_type_description.sql
week_4/taxi-rides-ny-project/models/core/: dim_monthly_revenue.sql  dim_zones.sql  fact_fhv.sql  fact_trips.sql
week_4/taxi-rides-ny-project/models/staging/: schema.yaml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
week_5/src/: Dockerfile  docker-compose.yml
week_5/src/code/notebook/: homework.ipynb
week_6/docker/: README.md  docker-compose.yml
week_6/docker/spark/: .dockerignore  build_spark.sh  docker-compose.yml  spark_base.Dockerfile
week_6/src/homework/: README.md  kafka_ride_consumer.py  kafka_ride_producer.py  requirements.txt  settings.py
